# MedAuraAI

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DOCKER_GUIDE.md  Dockerfile  LICENSE  Main.py  QUICK_DEPLOY.md  QUICK_START.md  README.md  SECURITY.md  api_server.py  docker-compose.prod.yml  docker-compose.yml  env.example  export_cases.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  docker.yml  frontend-ci.yml
Utils/: __init__.py
backend/: Dockerfile  api_server.py  pyproject.toml
docs/: API.md  ARCHITECTURE.md  GIT_SETUP.md
frontend/: .dockerignore  .eslintrc.json  Dockerfile  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  vercel.json
frontend/public/cases/: index.json
frontend/src/: App.jsx  apple-theme.css  chatbot.css  ems-mode-toggle.css  ems-mode.css  homepage-animations.css  index.jsx  mission-card.css  page-transitions.css  premium-effects.css  premium-landing.css  premium-mode-cards.css  premium-pricing.css  premium-products.css  premium-stats.css  sidebar.css  styles.css
frontend/src/api/: api.js  demo-api.js
frontend/src/components/: AIRecommendationPanel.jsx  AboutComponents.jsx  AboutPage.jsx  AnimatedBackground.css  AnimatedBackground.jsx  AnimatedChatbot.css  AnimatedChatbot.jsx  AnimationComponents.jsx  AppleCardsCarousel.jsx  AtAGlanceSummary.jsx  Aurora.css  Aurora.jsx  BrandComponents.jsx  Card.jsx  CaseStatusStrip.jsx  ChatWidget.jsx  ClinicalCommandCenter.jsx  ClinicalCopier.jsx  ClinicalDashboard.jsx  ClinicalGovernanceFooter.jsx  ComparisonTable.jsx  ConfidenceScore.jsx  CountUp.jsx  Counter.css  Counter.jsx  CriticalAlertsBar.jsx  CriticalSafetyBanner.jsx  CursorFollower.jsx  DarkVeil.css  DarkVeil.jsx  DashboardComponents.jsx  DemoBanner.jsx  EMSModeToggle.jsx  ERCopilotComponents.jsx  ERCopilotPage.jsx  ERCopilotPage.structure.js  EnhancedChatIcon.css  EnhancedChatIcon.jsx  EnhancedSafetyBanner.jsx  ErrorPage.jsx  (+49 more)
frontend/src/config/: api.config.js
frontend/src/hooks/: useDebounce.js  useSearch.js
frontend/src/services/: apiClient.js  authService.js  index.js  patientService.js  tokenService.js
frontend/src/utils/: patientStorage.js
scripts/: deploy.sh
